k8s/greeter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-teller-service
spec:
  selector:
    k8s-app: fortune-teller-app
  ports:
  - port: 50051
    targetPort: 50051
    name: grpc
