k8s/greeter/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fortune-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "grpc"
spec:
  tls:
    - secretName: cert-fairbank-io
  rules:
  - host: sample.fairbank.io
    http:
      paths:
      - backend:
          serviceName: fortune-teller-service
          servicePort: grpc
